psa/add-privileged-existing-namespaces/.chainsaw-test/chainsaw-step-00-apply-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
  name: kyverno:background-controller:add-privileged-existing-namespaces
rules:
- apiGroups:
  - ""
  resources:
  - namespaces
  verbs:
  - update
