psa/add-privileged-existing-namespaces/.chainsaw-test/chainsaw-step-01-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: add-privileged-existing-ns01
