psa/add-privileged-existing-namespaces/.chainsaw-test/patched-again-ns01.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: baseline
  name: add-privileged-existing-ns01
