psa/add-privileged-existing-namespaces/.chainsaw-test/patched-ns02.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
  name: add-privileged-existing-ns02
