psa/add-privileged-existing-namespaces/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-privileged-existing-namespaces
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: chainsaw-step-00-apply-1.yaml
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
  - name: step-02
    try:
    - apply:
        file: ../add-privileged-existing-namespaces.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - assert:
        file: patched-ns01.yaml
    - error:
        file: not-patched-ns03.yaml
  - name: step-04
    try:
    - apply:
        file: policy-update.yaml
    - assert:
        file: patched-again-ns01.yaml
